--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Checkout target repo
         uses: actions/checkout@v4
         with:
-          repository: apt-evils-in/apt-99
+          repository: apt-evils-in/apt-evils-in.github.io
           token: ${{ secrets.DEPLOY_TOKEN }}
           persist-credentials: true
 
